fixed consent flicker, made some small changes to homepage, ux etc.

--- a/src/components/product.module.css
+++ b/src/components/product.module.css
@@ -20,12 +20,17 @@
 }
 
 
+
 @media(max-width: 600px) {
   .productImage {
     max-width: 100%;
     max-height: 95%;
     height:125px;
     object-fit: contain; }
+
+  .productName {
+    display: none;
+  }
 }
 
 
